added country picker

--- a/locales/en-US/messages.properties
+++ b/locales/en-US/messages.properties
@@ -178,3 +178,5 @@ add_a_survey=Add a Survey
 add_a_dataset=Add a Data Set
 #Upload.js
 sorry_upload=Sorry, upload only works if you're logged in.
+#CaseEditor.js
+country_picker=Country Picker
