--- a/locales/en-US/messages.properties
+++ b/locales/en-US/messages.properties
@@ -182,3 +182,15 @@ add_a_dataset=Add a Data Set
 sorry_upload=Sorry, upload only works if you're logged in.
 #CaseEditor.js
 country_picker=Country Picker
+not_specified=Not specified
+facetoface_not_specified=Not specified
+facetoface_facetoface=Face-to-face
+facetoface_online=Online
+facetoface_both=Both online and face-to-face
+yes=Yes
+no=No
+majority=Majority
+none=None
+preferential=Preferential
+supermajority=Supermajority
+consensus=Consensus
