--- a/locales/en-US/messages.properties
+++ b/locales/en-US/messages.properties
@@ -169,9 +169,11 @@ add_video=Add a video
 paste_video=Paste YouTube or Vimeo URL here
 add_location=Add a location
 related_cases=Related cases
+related_methods=Related methods
+related_organizations=Related organizations
 search_related_cases=Search for related cases
 search_related_methods=Search for related methods
-search_related_orgs=Search for related organizations
+search_related_organizations=Search for related organizations
 submit=Submit
 add_a_case=Add a Case
 add_a_method=Add a Method
