added welcome screen

--- a/locales/en-US/messages.properties
+++ b/locales/en-US/messages.properties
@@ -130,6 +130,10 @@ surveys_text_2=The {participantSurvey} will capture the experience of participan
 surveys_text_3=The {observerSurvey} will capture views pertaining to the broader impact of a particular case. ‘Observers’ include practitioners, participants or researchers with particular knowledge of that case.
 participant_survey=Participant Survey
 observer_survey=Observer Survey
+#Home.js
+welcome_message=Participedia is a global community sharing knowledge and stories about public participation.
+learn_more=Learn more about us
+got_it=Okay, got it
 #HelpBar.js
 help_q1=What is a case?
 help_q2=What is a method?
