Make Organizations follow refactoring model

--- a/locales/en-US/messages.properties
+++ b/locales/en-US/messages.properties
@@ -214,3 +214,6 @@ governance_contribution=Governance contribution
 typical_funding_source=Typical funding source
 typical_sponsoring_entity=Typical sponsoring entity
 typical_implementing_entity=Typical implementing entity
+#Organization.js
+sector=Sector
+executive_director=Executive Director
