Refactor Case to use new refactored bits.
- switch to non-shallow mounting in tests
- deal with cases which have null country codes

--- a/locales/en-US/messages.properties
+++ b/locales/en-US/messages.properties
@@ -202,6 +202,10 @@ none=None
 preferential=Preferential
 supermajority=Supermajority
 consensus=Consensus
+#Case.js
+specific_topic=Specific topic
+voting=Voting
+facetoface_online_or_both=Face-to-face, online or both
 #Method.js
 kind_of_influence=Kind of influence
 communication_with_audience=Communication with audience
