Case editing starting to shape up

--- a/locales/en-US/messages.properties
+++ b/locales/en-US/messages.properties
@@ -236,3 +236,9 @@ typical_implementing_entity=Typical implementing entity
 #Organization.js
 sector=Sector
 executive_director=Executive Director
+#CaseEditor
+strawberry=Strawberry
+chocolate=Chocolate
+vanilla=Vanilla
+war=War
+peace=Peace
