add some missing strings

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -677,3 +677,5 @@ union=Union
 local_government_eg_village_town_city=Local Government (e.g. Village, Town, City)
 nongovernmental_organization_nonprofit=Non-Governmental Organization (Non-profit)
 faithbased_organization=Faith-Based Organization
+experiments=Experiments
+tag=Tag
