Add sample featured searches

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -679,3 +679,6 @@ nongovernmental_organization_nonprofit=Non-Governmental Organization (Non-profit
 faithbased_organization=Faith-Based Organization
 experiments=Experiments
 tag=Tag
+featured_searches=Featured Searches
+mention_participatory_budgeting=Mention "Participatory Budgeting"
+tag_infrastructure=Tagged as: Infrastructure
