--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -187,7 +187,7 @@ add_a_dataset=Add a Data Set
 #Upload.js
 sorry_upload=Sorry, upload only works if you're logged in.
 #CaseEditor.js
-country_picker=Country Picker
+country_picker=Location
 not_specified=Not specified
 facetoface_not_specified=Not specified
 facetoface_facetoface=Face-to-face
