updated social links

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -39,7 +39,8 @@ resources_intro=Participedia’s Teaching Training and Mentoring Committee has c
 course_assignments=Participedia in course assignments
 sample_assignment_1=Sample Assignment 1
 grading_rubric=Grading Rubric
-
+##Layout.js
+quick_submit=Quick Submit
 ##
 community=Community
 community_intro=Participedia is a research partnership representing institutions and organizations around the world. The team produced Participedia.net as a tool to connect their research and bolster it with publicly crowdsourced knowledge about democratic innovations. All members of the Participedia community are integral to this process. The initial vision for Participedia was developed by Archon Fung (Kennedy School of Government, Harvard University) and Mark E. Warren (Department of Political Science, University of British Columbia), and is guided by a set of standing committees.
