Lots of changes to quick submit to be more like they should be. Still work to do.

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -917,3 +917,25 @@ tag=Tag
 featured_searches=Featured Searches
 mention_participatory_budgeting=Mention "Participatory Budgeting"
 tag_infrastructure=Tagged as: Infrastructure
+case_title_label=Title of case
+case_title_placeholder=Title of case [limited word count]
+case_body_title=Case Description
+method_title_label=Name of method
+method_title_placeholder=Name of method [limited word count]
+method_body_title=Method description
+organization_title_label=Name of organization
+organization_title_placeholder=Name of organization [limited word count]
+organization_body_title=Description of the organization
+tags_title=Tags
+unknown_title_label=Unknown
+unknown_title_placeholder=Unknown
+unknown_body_title=Unknown
+best_for=Best for
+governance_contribution=Governance contribution
+issue_interdependency=Issue interdependency
+issue_polarization=Issue polarization
+issue_technical_complexity=Issue technical complexity
+method_of_interaction=Method of interaction
+public_interaction_method=Public interaction method
+typical_funding_source=Typical funding source
+
