--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1130,4 +1130,5 @@ submit_organization=Submit Organization
 incomplete_case=Case needs title and body
 incomplete_method=Method needs name and body
 incomplete_organization=Organization needs name and description
+do_full_version=Do full version
 
