Make a single column of fields.  Add some styling (but needs tweaks)

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -5,12 +5,15 @@ about=About
 research=Research
 all=All
 news=News
-cases=cases
 case=Case
 method=Method
-methods=methods
-organizations=organizations
 organization=Organization
+cases=Cases
+methods=Methods
+organizations=Organizations
+related_cases=Enter Related Cases
+related_methods=Enter Related Methods
+related_organizations=Enter Related Organizations
 survey=Survey
 surveys=surveys
 home=Home
