Staging some work on the editors

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1130,9 +1130,9 @@ university_or_research=University or Research
 submit_case=Submit Case
 submit_method=Submit Method
 submit_organization=Submit Organization
-incomplete_case=Case needs title and body
-incomplete_method=Method needs name and body
-incomplete_organization=Organization needs name and description
+incomplete_case=Case needs both a title and a body
+incomplete_method=Method needs both a name and a body
+incomplete_organization=Organization needs both a name and a description
 do_full_version=Do full version
 suggest_tag=Add tags to make your submission easy to find (e.g. OIDP2017)
 location_placeholder=Type to search for known location
