Many fixes in quck submit and editing.

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -428,6 +428,7 @@ sorry_upload=Sorry, upload only works if you're logged in.
 #CaseEditor.js
 country_picker=Location
 not_specified=Not specified
+voting=Voting Method
 facetoface_not_specified=Not specified
 facetoface_facetoface=Face-to-face
 facetoface_online=Online
