Make the fancy category/issue workflow

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1137,3 +1137,218 @@ incomplete_organization=Organization needs both a name and a description
 do_full_version=Do full version
 suggest_tag=Add tags to make your submission easy to find (e.g. OIDP2017)
 location_placeholder=Type to search for known location
+
+# General topics
+identity_diversity=Identity & Diversity
+agriculture_forestry_fishing_mining_industries=Agriculture, Forestry, Fishing, & Mining Industries
+arts_culture_recreation=Arts, Culture & Recreation
+business=Business
+economics=Economics
+education=Education
+energy=Energy
+environment=Environment
+governance_political_institutions_eg_constitutions_legal_systems_electoral_systems=Governance & Political Institutions (e.g. Constitutions, Legal Systems, Electoral Systems)
+health=Health
+housing=Housing
+human_rights_civil_rights=Human Rights & Civil Rights
+immigration_migration=Immigration & Migration
+international_affairs=International Affairs
+labor_work=Labor & Work
+law_enforcement_criminal_justice_corrections=Law Enforcement, Criminal Justice & Corrections
+media_telecommunications_information=Media, Telecommunications, & Information
+national_security=National Security
+other=Other
+planning_development=Planning & Development
+science_technology=Science & Technology
+social_welfare=Social Welfare
+transportation=Transportation
+
+# Specific issues
+ability/disability_issues=Ability/Disability Issues
+abortion=Abortion
+access_to_radio_television_frequencies=Access to Radio & Television Frequencies 
+administration_of_campaigns_and_elections=Administration of Campaigns and Elections
+affordable_housing=Affordable Housing
+age_discrimination=Age Discrimination
+aging=Aging
+aging_issues=Aging Issues
+agricultural_biotechnology=Agricultural Biotechnology
+air_qualtiy=Air Qualtiy
+air_travel=Air Travel
+alternative_renewable_energy=Alternative & Renewable Energy
+animal_welfare=Animal Welfare
+arms_control=Arms Control
+articificial_intellegence=Articificial Intellegence
+bankruptcy=Bankruptcy
+biomedical_research_development=Biomedical Research & Development
+birth_control=Birth Control
+budget_local=Budget - Local
+budget_national=Budget - National
+budget_provincial_regional_state=Budget - Provincial, Regional, State
+bureaucracy=Bureaucracy
+carbon_capture_sequestration=Carbon Capture & Sequestration
+censorship=Censorship
+censorship=Censorship
+child_care=Child Care
+citizenship_role_of_citizens=Citizenship & Role of Citizens
+civil_law=Civil Law
+climate_change=Climate Change
+coal=Coal
+cohousing=Cohousing
+community_police_relations=Community & Police Relations
+community_resettlement=Community Resettlement
+concentration_of_media_ownership=Concentration of Media Ownership
+constitutional_reform=Constitutional Reform
+consumer_protection=Consumer Protection
+copyrights_and_patents=Copyrights and Patents
+corporate_subsidies=Corporate Subsidies
+court_systems=Court Systems
+criminal_law=Criminal Law
+cultural_assimilation=Cultural Assimilation
+curriculum_and_standards=Curriculum and Standards
+cyber_security=Cyber Security
+cycling=Cycling
+diplomacy=Diplomacy
+disability_rights=Disability Rights
+disabled_assistance=Disabled Assistance
+disaster_preparedness=Disaster Preparedness
+disease_prevention=Disease Prevention
+drug_alcohol_abuse=Drug & Alcohol Abuse
+drug_coverage_cost=Drug Coverage & Cost
+drug_testing_regulation=Drug Testing & Regulation
+early_childhood_education=Early Childhood Education
+ecohousing=Eco-Housing
+economic_development=Economic Development
+economic_inequality=Economic Inequality
+elderly_assistance=Elderly Assistance
+elderly_housing=Elderly Housing
+electricity=Electricity
+elementary_and_secondary_education=Elementary and Secondary Education
+employee_benefits=Employee Benefits
+energy_conservation=Energy Conservation
+energy_efficiency_storage=Energy Efficiency & Storage
+energy_siting_transmission=Energy Siting & Transmission
+environmental_conservation=Environmental Conservation
+ethnic_racial_relations=Ethnic & Racial Relations
+ethnic/racial_equality_equity=Ethnic/Racial Equality & Equity
+fair_labor_standards=Fair Labor Standards
+financing_of_political_campaigns=Financing of Political Campaigns
+fisheries_fishing=Fisheries & Fishing
+food_nutrition=Food & Nutrition
+food_nutrition_assistance=Food & Nutrition Assistance
+food_inspection_safety=Food Inspection & Safety
+foreign_aid=Foreign Aid
+freedom_of_information=Freedom of Information
+freedom_of_speech=Freedom of Speech
+funding=Funding
+gender_equality_equity=Gender Equality & Equity
+gender_issues=Gender Issues
+geotechnology=Geotechnology
+government_funding_of_education=Government Funding of Education
+government_spending=Government Spending
+government_subsidies=Government Subsidies
+government_transparency=Government Transparency
+hazardous_waste=Hazardous Waste
+health_care_reform=Health Care Reform
+health_insurance=Health Insurance
+higher_education=Higher Education
+highway_safety=Highway Safety
+homelessness=Homelessness
+housing_planning=Housing Planning
+human_rights=Human Rights
+human_trafficking=Human Trafficking
+identity_politics=Identity Politics
+immigration=Immigration
+indigenous_issues=Indigenous Issues
+indigenous_planning=Indigenous Planning
+industrial_policy=Industrial Policy
+industrial_siting_guidelines=Industrial Siting Guidelines
+information_communications_technology=Information & Communications Technology
+infrastructure=Infrastructure
+intellectual_property_rights=Intellectual Property Rights
+intelligence_gathering=Intelligence Gathering
+intergovernmental_relations=Intergovernmental Relations
+international_law=International Law
+internet_access=Internet Access
+internet_governance=Internet Governance
+jails_and_prisons=Jails and Prisons
+judicial_reform=Judicial Reform
+lgbtq_issues=LGBTQ Issues
+labor_unions=Labor Unions
+land_use=Land Use
+libraries=Libraries
+longterm_care=Long-Term Care
+lowincome_assistance=Low-Income Assistance
+lowincome_assistance=Low-income Assistance
+maritime=Maritime
+mass/public_transport=Mass/Public Transport
+medical_liability=Medical Liability
+mental_health=Mental Health
+migrant_and_seasonal_labor=Migrant and Seasonal Labor
+military_and_defense=Military and Defense
+monetary_policy=Monetary Policy
+museums=Museums
+nanotechnology=Nanotechnology
+natural_gas_oil=Natural Gas & Oil
+natural_resource_management=Natural Resource Management
+nuclear_energy=Nuclear Energy
+open_data=Open Data
+other=Other
+pensions_retirement=Pensions & Retirement
+police=Police
+political_parties=Political Parties
+political_rights=Political Rights
+poverty=Poverty
+poverty=Poverty
+public_amenities=Public Amenities
+public_art=Public Art
+public_safety=Public Safety
+quality_of_health_care=Quality of Health Care
+railroads=Railroads
+recycling=Recycling
+refugee_resettlement=Refugee Resettlement
+refugee_rights=Refugee Rights
+regional_global_governance=Regional & Global Governance
+regionalism=Regionalism
+regulation=Regulation
+regulation=Regulation
+regulatory_policy=Regulatory Policy
+religious_rights=Religious Rights
+research_development=Research & Development
+research_development=Research & Development
+research_development=Research & Development
+resilience_planning_design=Resilience Planning & Design
+right_to_adequate_housing=Right to Adequate Housing
+right_to_representation=Right to Representation
+roads_and_highways=Roads and Highways
+rural_housing=Rural Housing
+selfdriving_vehicles=Self-Driving Vehicles
+sentencing_guidelines=Sentencing Guidelines
+social_determinants_of_health=Social Determinants of Health
+space_exploration=Space Exploration
+special_education=Special Education
+species_protection=Species Protection
+sports=Sports
+taxation=Taxation
+teacher_training_accountability=Teacher Training & Accountability
+telephone_access=Telephone Access
+terrorism=Terrorism
+torture=Torture
+tourism=Tourism
+trade_and_tariffs=Trade and Tariffs
+transparency=Transparency
+transportation_planning=Transportation Planning
+treaties=Treaties
+unemployment=Unemployment
+unofficial_track_ii_diplomacy=Unofficial (Track II) Diplomacy
+vocational_education_training=Vocational Education & Training
+wage_standards=Wage Standards
+walking/pedestrian_mobility=Walking/Pedestrian Mobility
+waste_disposal=Waste Disposal
+water_quality=Water Quality
+weather_forecasting=Weather Forecasting
+wilderness_protection=Wilderness Protection
+worker_health_safety=Worker Health & Safety
+workforce_education=Workforce Education
+youth_employment=Youth Employment
+youth_issues=Youth Issues
