--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1352,3 +1352,4 @@ worker_health_safety=Worker Health & Safety
 workforce_education=Workforce Education
 youth_employment=Youth Employment
 youth_issues=Youth Issues
+send_email_with_catgeory_additions=If you believe we should add some categories or specific topics, please email info@participedia.net
