Add basic pagination to search results

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1354,3 +1354,5 @@ youth_employment=Youth Employment
 youth_issues=Youth Issues
 send_email_with_catgeory_additions=If you believe we should add some categories or specific topics, please email info@participedia.net
 links=Relevant links (URLs)
+previous_page=Go to previous page
+next_page=Go to next page
