Make featured cases, etc. say that they are (could use better treatment).

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1356,3 +1356,4 @@ send_email_with_catgeory_additions=If you believe we should add some categories 
 links=Relevant links (URLs)
 previous_page=Go to previous page
 next_page=Go to next page
+featured=Featured
