Add pagination and totals. Pull up all thumbnails from uploads bucket.

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1357,3 +1357,6 @@ links=Relevant links (URLs)
 previous_page=Go to previous page
 next_page=Go to next page
 featured=Featured
+page=page
+pages=pages
+of=of
