--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -923,7 +923,7 @@ mention_participatory_budgeting=Mention "Participatory Budgeting"
 tag_infrastructure=Tagged as: Infrastructure
 case_title_label=Title
 case_title_placeholder=Title of case [limited word count]
-case_body_title=Case Description
+case_body_title=Case Description/Narrative
 method_title_label=Name
 method_title_placeholder=Name of method [limited word count]
 method_body_title=Method description
@@ -1131,8 +1131,8 @@ university_or_research=University or Research
 submit_case=Submit Case
 submit_method=Submit Method
 submit_organization=Submit Organization
-incomplete_case=Case needs both a title and a body
-incomplete_method=Method needs both a name and a body
+incomplete_case=Case needs both a title and a description
+incomplete_method=Method needs both a name and a description
 incomplete_organization=Organization needs both a name and a description
 do_full_version=Do full version
 suggest_tag=Add tags to make your submission easy to find (e.g. OIDP2017)
@@ -1360,3 +1360,8 @@ featured=Featured
 page=page
 pages=pages
 of=of
+data=Data
+specific_topic=Specific Topic
+tags=Tags
+case_description_placeholder=<p>The following standard structure makes it easier to compare and analyze entries.</p><p>We recommend you use the headings below and refer to our guidelines as you prepare your case entry.</p><p>To view the guidelines, copy and paste this URL into your browser: <a href="https://goo.gl/V2SHQn">https://goo.gl/V2SHQn</a></p><p/><h3>Problems and Purpose</h3><p/><h3>History</h3><p/><h3>Originating Entities and Funding</h3><p/><h3>Participant Selection</h3><p/><h3>Methods and Tools Used</h3><p/><h3>Deliberation, Decisions, and Public Interaction</h3><p/><h3>Influence, Outcomes, and Effects</h3><p/><h3>Analysis and Lessons Learned</h3><p/><h3>Secondary Sources</h3><p/><h3>External Links</h3><p/><h3>Notes</h3><p/>
+
