--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -456,6 +456,7 @@ start_date_placeholder=Select a start date or date of single event
 end_date=End date
 end_date_placeholder=Select an end date, if applicable
 ongoing=Ongoing
+videos=Videos
 targeted_participant_demographic=Targeted participant demographic
 targeted_participants_public_role=Targeted participants public role
 targeted_audience=Targeted audience
