working on forms

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -457,6 +457,8 @@ end_date=End date
 end_date_placeholder=Select an end date, if applicable
 ongoing=Ongoing
 videos=Videos
+videos_placeholder=Add a video (Vimeo, YouTube)
+links_placeholder=Add a link
 targeted_participant_demographic=Targeted participant demographic
 targeted_participants_public_role=Targeted participants public role
 targeted_audience=Targeted audience
@@ -466,6 +468,7 @@ updated_date=Updated date
 total_number_of_participants=Total number of participants
 staff_type=Staff type
 who_else_supported_the_initiative=Who else supported the initiative
+general_issues_placeholder=Select an issue
 #Method.js
 kind_of_influence=Kind of influence
 communication_with_audience=Communication with audience
@@ -1142,7 +1145,8 @@ incomplete_organization=Organization needs both a name and a description
 do_full_version=Do full version
 suggest_tag=Add tags to make your submission easy to find (e.g. OIDP2017)
 location_placeholder=Type to search for known location
-
+links_prompt=Add another link
+videos_prompt=Add another video
 # General topics
 identity_diversity=Identity & Diversity
 agriculture_forestry_fishing_mining_industries=Agriculture, Forestry, Fishing, & Mining Industries
