--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -460,29 +460,43 @@ videos=Videos
 videos_placeholder=Add a video (Vimeo, YouTube)
 links_placeholder=Add a link
 targeted_participant_demographic=Targeted participant demographic
+targeted_participant_demographic_placeholder=Select targeted participant demographic
 targeted_participants_public_role=Targeted participants public role
+targeted_participants_public_role_placeholder=Select targeted participants public role
 targeted_audience=Targeted audience
+targeted_audience_placeholder=Select targeted audience
 participant_selection=Participant selection
+participant_selection_placeholder=Select participant selection
 type_of_funding_entity=Type of funding entity
+type_of_funding_entity_placeholder=Select type of funding entity
 updated_date=Updated date
 total_number_of_participants=Total number of participants
 staff_type=Staff type
 who_else_supported_the_initiative=Who else supported the initiative
 general_issues_placeholder=Select an issue
+issue_placeholder=Select an issue
 #Method.js
 kind_of_influence=Kind of influence
+kind_of_influence_placeholder=Select kind of influence
 communication_with_audience=Communication with audience
+communication_with_audience_placeholder=Select a communication with audience
 decision_method=Decision method
+decision_method_placeholder=Select a decision method
 face_to_face_online_or_both=Face-to-face, online or both
+facetoface_online_or_both_placeholder=Select face-to-face, online or both
 facilitated=Facilitated
 communication_mode=Communication mode
-best_for=Best for
+communication_mode_placeholder=Select a communication mode
 governance_contribution=Governance contribution
 typical_funding_source=Typical funding source
+typical_funding_source_placeholder=Select typical funding source
 typical_sponsoring_entity=Typical sponsoring entity
+typical_sponsoring_entity_placeholder=Select typical sponsoring entity
 typical_implementing_entity=Typical implementing entity
+typical_implementing_entity_placeholder=Select typical implementing entity
 #Organization.js
 sector=Sector
+sector_placeholder=Select Sector
 executive_director=Executive Director
 #CaseEditor
 strawberry=Strawberry
@@ -534,6 +548,7 @@ new_media_ie_internet_texting_etc=New Media (i.e. internet, texting, etc)
 traditional_media_ie_television_radio_newspapers=Traditional Media (i.e. television, radio, newspapers)
 not_applicable=Not Applicable
 voting=Voting
+voting_placeholder=Select type of voting
 getting_sense_of_room/group_ie_no_formal_voting=Getting sense of room/group (i.e. no formal voting)
 opinion_survey=Opinion Survey
 both=both
@@ -932,27 +947,38 @@ tag_infrastructure=Tagged as: Infrastructure
 case_title_label=Name of Case
 case_title_placeholder=Type to search for existing case or enter title
 case_body_title=Case Description/Narrative
-method_title_label=Name
-method_title_placeholder=Name of method [limited word count]
+method_title_label=Name of Method
+method_title_placeholder=Type to search for existing method or enter title
 method_body_title=Method description
-organization_title_label=Name
-organization_title_placeholder=Name of organization [limited word count]
+organization_title_label=Name of Organization
+organization_title_placeholder=Type to search for existing organization or enter title
 organization_body_title=Description of the organization
 tags_title=Tags
 unknown_title_label=Unknown
 unknown_title_placeholder=Unknown
 unknown_body_title=Unknown
 best_for=Best for
+best_for_placeholder=Select Best for
 governance_contribution=Governance contribution
+governance_contribution_placeholder=Select Governance contribution
 issue_interdependency=Issue interdependency
+issue_interdependency_placeholder=Select Issue interdependency
 issue_polarization=Issue polarization
+issue_polarization_placeholder=Select Issue polarization
 issue_technical_complexity=Issue technical complexity
+issue_technical_complexity_placeholder=Select Issue technical complexity
 method_of_interaction=Method of interaction
+method_of_interaction_placeholder=Select Method of interaction
 public_interaction_method=Public interaction method
+public_interaction_method_placeholder=Select Public interaction method
 typical_funding_source=Typical funding source
+typical_funding_source_placeholder=Select Typical funding source
 achieving_public_goods=Achieving Public Goods
+achieving_public_goods_placeholder=Select Achieving Public Goods
 addressing_identitybased_issues=Addressing Identity-Based Issues
+addressing_identitybased_issues_placeholder=Select Addressing Identity-Based Issues
 providing_social_goods=Providing Social Goods
+providing_social_goods_placeholder=Select Providing Social Goods
 distributing_individual_material_goods=Distributing Individual Material Goods
 aggregation_of_individual_preferences_to_create_survey_data=Aggregation of Individual Preferences to Create Survey Data
 n/a=N/A
@@ -1139,9 +1165,9 @@ university_or_research=University or Research
 submit_case=Submit Case
 submit_method=Submit Method
 submit_organization=Submit Organization
-incomplete_case=Case needs both a title and a description
-incomplete_method=Method needs both a name and a description
-incomplete_organization=Organization needs both a name and a description
+incomplete_case=Case needs a title
+incomplete_method=Method needs a name
+incomplete_organization=Organization needs a name
 do_full_version=Do full version
 suggest_tag=Add tags to make your submission easy to find (e.g. OIDP2017)
 location_placeholder=Type to search for known location
@@ -1371,6 +1397,7 @@ pages=pages
 of=of
 data=Data
 specific_topic=Specific Topic
+specific_topic_placeholder=Select an specific Topic
 tags=Tags
 case_description_placeholder=<p>The following standard structure makes it easier to compare and analyze entries.</p><p>We recommend you use the headings below and refer to our guidelines as you prepare your case entry.</p><p>To view the guidelines, copy and paste this URL into your browser: <a href="https://goo.gl/V2SHQn">https://goo.gl/V2SHQn</a></p><p/><h3>Problems and Purpose</h3><p/><h3>History</h3><p/><h3>Originating Entities and Funding</h3><p/><h3>Participant Selection</h3><p/><h3>Methods and Tools Used</h3><p/><h3>Deliberation, Decisions, and Public Interaction</h3><p/><h3>Influence, Outcomes, and Effects</h3><p/><h3>Analysis and Lessons Learned</h3><p/><h3>Secondary Sources</h3><p/><h3>External Links</h3><p/><h3>Notes</h3><p/>
 
