updated quick-submit forms according to mockups

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -954,6 +954,7 @@ organization_title_label=Name of Organization
 organization_title_placeholder=Type to search for existing organization or enter title
 organization_body_title=Description of the organization
 tags_title=Tags
+tags_placeholder=Type to search for an existing tag
 unknown_title_label=Unknown
 unknown_title_placeholder=Unknown
 unknown_body_title=Unknown
@@ -1163,8 +1164,11 @@ government=Government
 nonprofit_or_non_governmental=Non-Profit or Non Governmental
 university_or_research=University or Research
 submit_case=Submit Case
+quick_submit_case=Quick Submit
 submit_method=Submit Method
+quick_submit_method=Quick Submit
 submit_organization=Submit Organization
+quick_submit_organization=Quick Submit
 incomplete_case=Case needs a title
 incomplete_method=Method needs a name
 incomplete_organization=Organization needs a name
