--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -33,6 +33,7 @@ result=Result
 results=Results
 users=Users
 no_results_found=No results found.
+submitted=Submitted
 #Teaching.js
 teaching_subtitle=Participedia in the Classroom
 teaching_intro_1=Writing or editing articles for Participedia can be a great assignment for courses that deal with political participation, democratic innovation, or deliberation.
