added footer for mobile

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -14,6 +14,10 @@ organizations=Organizations
 related_cases=Enter Related Cases
 related_methods=Enter Related Methods
 related_organizations=Enter Related Organizations
+related_content=Related Content
+case_data=Case Data
+method_data=Method Data
+organization_data=Organization Data
 survey=Survey
 surveys=surveys
 home=Home
