--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -537,13 +537,13 @@ planning_eg_urban_planning_transportation_etc=Planning (e.g. Urban planning, Tra
 express_opinions/preferences_only=Express opinions/preferences only
 storytelling=Story-Telling
 discussion=Discussion
+discussion_dialogue_deliberation=Discussion, Dialogue, or Deliberation
 formal_testimony=Formal Testimony
 informal_social_activities=Informal Social Activities
 no_interaction_among_participants=No interaction among participants
 dialogue=Dialogue
 organized_demonstrations=Organized Demonstrations
 negotiate_bargain=Negotiate & Bargain
-or_deliberation=or Deliberation
 listen/watch_as_spectator=Listen/watch as spectator
 acting/drama=Acting/Drama
 policy_recommendations=Policy Recommendations
@@ -1178,6 +1178,8 @@ incomplete_case=Case needs a title
 incomplete_method=Method needs a name
 incomplete_organization=Organization needs a name
 do_full_version=Do full version
+edit_full_version=Edit full version
+save=Save
 suggest_tag=Add tags to make your submission easy to find (e.g. OIDP2017)
 location_placeholder=Type to search for known location
 links_prompt=Add another link
