Lots of intl cleanup, no functional change intended.

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1,4 +1,7 @@
 featured=Featured
+featured-case=Featured Case
+featured-method=Featured Method
+featured-organization=Featured Organization
 chronological=Most Recent
 alphabetical=Alphabetical
 about=About
