--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -21,6 +21,7 @@ related_content=Related Content
 case_data=Case Data
 method_data=Method Data
 organization_data=Organization Data
+content_data=Content
 survey=Survey
 surveys=surveys
 home=Home
