--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -444,9 +444,15 @@ add_photo=Add a photo
 add_video=Add a video
 paste_video=Paste YouTube or Vimeo URL here
 add_location=Add a location
-related_cases=Related cases
-related_methods=Related methods
-related_organizations=Related organizations
+related_cases_label=Cases
+related_cases_prompt=Related cases include public participation events that are part of a larger initiative. For example, this case could be considered a component part of another case or vice versa.
+related_cases_placeholder=Begin typing the title of an existing case
+related_methods_label=Methods
+related_methods_prompt=Related methods include participatory methods or tools used during this particular case.
+related_methods_placeholder=Begin typing the title of an existing method
+related_organizations_label=Organizations
+related_organizations_prompt=Related organizations include any organization that played a direct role in the planning or execution of this particular case.
+related_organizations_placeholder=Begin typing the title of an existing organization
 search_related_cases=Search for related cases
 search_related_methods=Search for related methods
 search_related_organizations=Search for related organizations
@@ -483,6 +489,7 @@ issue=Issue
 general_issues=General Issues
 who_was_primarily_responsible_for_organizing_the_initiative=Who was primarily responsible for organizing the initiative
 number_of_meeting_days=Number of meeting days
+number_of_meeting_days_placeholder=Enter number of meeting days
 date=Date
 start_date=Start date
 start_date_placeholder=Select a start date or date of single event
@@ -491,8 +498,10 @@ end_date_placeholder=Select an end date, if applicable
 ongoing=Ongoing
 videos=Videos
 photos=Photos
+photos_placeholder=Select a photo from your device
 videos_placeholder=Add a video (Vimeo, YouTube)
 links_placeholder=Add a link
+links_placeholder_1=Enter a link and press +
 targeted_participant_demographic=Targeted participant demographic
 targeted_participant_demographic_placeholder=Select targeted participant demographic
 targeted_participants_public_role=Targeted participants public role
@@ -506,7 +515,9 @@ type_of_funding_entity_placeholder=Select type of funding entity
 updated_date=Updated date
 total_number_of_participants=Total number of participants
 staff_type=Staff type
+staff_type_placeholder=Enter staff type
 who_else_supported_the_initiative=Who else supported the initiative
+who_else_supported_the_initiative_placeholder=Enter who else supported the initiative
 general_issues_placeholder=Select an issue
 issue_placeholder=Select an issue
 #Method.js
@@ -532,6 +543,7 @@ typical_implementing_entity_placeholder=Select typical implementing entity
 sector=Sector
 sector_placeholder=Select Sector
 executive_director=Executive Director
+executive_director_placeholder=Enter Executive Director
 #CaseEditor
 strawberry=Strawberry
 chocolate=Chocolate
@@ -988,7 +1000,8 @@ organization_title_label=Name of Organization
 organization_title_placeholder=Type to search for existing organization or enter title
 organization_body_title=Description of the organization
 tags_title=Tags
-tags_placeholder=Type to search for an existing tag
+tags_prompt=Type to search for an existing tag
+tags_placeholder=Enter a tag
 unknown_title_label=Unknown
 unknown_title_placeholder=Unknown
 unknown_body_title=Unknown
