implementing the new Profile page

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -437,6 +437,8 @@ website=Website
 biography=Biography
 tell_us=Tell us about yourself
 sorry=Sorry, you need to log in to see this page.
+authored=Authored
+bookmarked=Bookmarked
 #ItemForm.js
 title=Title
 summary=Summary
