updated EditProfile and adjusted spacing in all forms
making fonts variables

cleaned up typography across the site

fixing tags on sidebar

removed fields we no longer need from user profile

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -14,9 +14,9 @@ organization=Organization
 cases=Cases
 methods=Methods
 organizations=Organizations
-related_cases=Enter Related Cases
-related_methods=Enter Related Methods
-related_organizations=Enter Related Organizations
+related_cases=Related Cases
+related_methods=Related Methods
+related_organizations=Related Organizations
 related_content=Related Content
 case_data=Case Data
 method_data=Method Data
@@ -439,6 +439,9 @@ tell_us=Tell us about yourself
 sorry=Sorry, you need to log in to see this page.
 authored=Authored
 bookmarked=Bookmarked
+organization_profile_placeholder=Type to search for an organization on Participedia or enter the name of the company or organization that you work for
+affiliation=Department
+save_profile=Save Profile
 #ItemForm.js
 title=Title
 summary=Summary
@@ -996,11 +999,11 @@ case_title_label=Title of Case
 case_title_placeholder=Enter title
 case_title_exp_text=Please give this case a descriptive title in 15 words or less. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
 case_body_title=Case Description/Narrative
-method_title_label=Name of Method
-method_title_placeholder=Type to search for existing method or enter title
+method_title_label=Title of Method
+method_title_placeholder=Enter title
 method_body_title=Method description
-organization_title_label=Name of Organization
-organization_title_placeholder=Type to search for existing organization or enter title
+organization_title_label=Title of Organization
+organization_title_placeholder=Enter title
 organization_body_title=Description of the organization
 tags_title=Tags
 tags_prompt=Type to search for an existing tag
@@ -1219,8 +1222,8 @@ quick_submit_method=Quick Submit
 submit_organization=Submit Organization
 quick_submit_organization=Quick Submit
 incomplete_case=Case needs a title
-incomplete_method=Method needs a name
-incomplete_organization=Organization needs a name
+incomplete_method=Method needs a title
+incomplete_organization=Organization needs a title
 do_full_version=Do full version
 edit_full_version=Edit full version
 save=Save
