--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1217,7 +1217,9 @@ nonprofit_or_non_governmental=Non-Profit or Non Governmental
 university_or_research=University or Research
 submit_case=Submit Case
 quick_submit_case=Quick Submit
+publish=Publish
 submit_method=Submit Method
+or=or
 quick_submit_method=Quick Submit
 submit_organization=Submit Organization
 quick_submit_organization=Quick Submit
