update snaps and 'nothing yet' behavior

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -500,6 +500,11 @@ adding_cases=Adding new cases to Participedia
 new_case=New Case
 new_method=New Method
 new_organization=New Organization
+#Profile.js
+no_content_yet=You haven't added any content yet. Creating content in Participedia is easy. Try
+no_bookmarks_yet_1=You don't have any bookmarks yet. Look for this icon
+no_bookmarks_yet_2=to bookmark content.
+edit_profile=Edit Profile
 #EditProfile.js
 name=Name
 location=Location
