working on the ranking widget

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1076,7 +1076,7 @@ featured_searches=Featured Searches
 mention_participatory_budgeting=Mention "Participatory Budgeting"
 tag_infrastructure=Tagged as: Infrastructure
 case_title_label=Title of Case
-case_title_placeholder=Enter title
+case_title_placeholder=Give this public participation project or event a descriptive title in <b>10 words or less</b>. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
 case_title_exp_text=Please give this case a descriptive title in 15 words or less. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
 case_body_title=Case Description/Narrative
 method_title_label=Title of Method
