added fields up to 1.7, missing actual values

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -519,7 +519,7 @@ tell_us=Tell us about yourself
 sorry=Sorry, you need to log in to see this page.
 authored=Authored
 bookmarked=Bookmarked
-organization_profile_placeholder=Type to search for an organization on Participedia or enter the name of the company or organization that you work for
+organization_profile_instructional=Type to search for an organization on Participedia or enter the name of the company or organization that you work for
 affiliation=Department
 save_profile=Save Profile
 #ItemForm.js
@@ -531,13 +531,13 @@ paste_video=Paste YouTube or Vimeo URL here
 add_location=Add a location
 related_cases_label=Cases
 related_cases_prompt=Related cases include public participation events that are part of a larger initiative. For example, this case could be considered a component part of another case or vice versa.
-related_cases_placeholder=Begin typing the title of an existing case
+related_cases_instructional=Begin typing the title of an existing case
 related_methods_label=Methods
 related_methods_prompt=Related methods include participatory methods or tools used during this particular case.
-related_methods_placeholder=Begin typing the title of an existing method
+related_methods_instructional=Begin typing the title of an existing method
 related_organizations_label=Organizations
 related_organizations_prompt=Related organizations include any organization that played a direct role in the planning or execution of this particular case.
-related_organizations_placeholder=Begin typing the title of an existing organization
+related_organizations_instructional=Begin typing the title of an existing organization
 search_related_cases=Search for related cases
 search_related_methods=Search for related methods
 search_related_organizations=Search for related organizations
@@ -553,6 +553,10 @@ change=Change
 #CaseEditor.js
 country_picker=Location
 not_specified=Not specified
+brief_description=Brief Description
+brief_description_explanatory=Enter tweet-length (140 characters or less) description of this case
+case_description_instructional=The following standard structure makes it easier to compare and analyze entries. Please use the headings below and refer to our guidelines as you prepare your case entry.
+links_placeholder=Add a link
 voting=Voting Method
 facetoface_not_specified=Not specified
 facetoface_facetoface=Face-to-face
@@ -575,65 +579,67 @@ issue=Issue
 general_issues=General Issues
 who_was_primarily_responsible_for_organizing_the_initiative=Who was primarily responsible for organizing the initiative
 number_of_meeting_days=Number of meeting days
-number_of_meeting_days_placeholder=Enter number of meeting days
+number_of_meeting_days_instructional=Enter number of meeting days
 date=Date
 start_date=Start date
-start_date_placeholder=Select a start date or date of single event
+start_date_instructional=Select a start date or date of single event
 end_date=End date
-end_date_placeholder=Select an end date, if applicable
+end_date_instructional=Select an end date, if applicable
 ongoing=Ongoing
 videos=Videos
 photos=Photos
-photos_placeholder=Select a photo from your device
-videos_placeholder=Add a video (Vimeo, YouTube)
-links_placeholder=Add a link
-links_placeholder_1=Enter a link and press +
+photos_instructional=Select a photo from your device
+videos_instructional=Add a video (Vimeo, YouTube)
+links_instructional=If there is a main website for this case, enter it here. Add links to additional sources so that readers and editors can find more information about this case online. 
+links_instructional_1=Enter a link and press +
 targeted_participant_demographic=Targeted participant demographic
-targeted_participant_demographic_placeholder=Select targeted participant demographic
+targeted_participant_demographic_instructional=Select targeted participant demographic
 targeted_participants_public_role=Targeted participants public role
-targeted_participants_public_role_placeholder=Select targeted participants public role
+targeted_participants_public_role_instructional=Select targeted participants public role
 targeted_audience=Targeted audience
-targeted_audience_placeholder=Select targeted audience
+targeted_audience_instructional=Select targeted audience
 participant_selection=Participant selection
-participant_selection_placeholder=Select participant selection
+participant_selection_instructional=Select participant selection
 type_of_funding_entity=Type of funding entity
-type_of_funding_entity_placeholder=Select type of funding entity
+type_of_funding_entity_instructional=Select type of funding entity
 updated_date=Updated date
 total_number_of_participants=Total number of participants
 staff_type=Staff type
-staff_type_placeholder=Enter staff type
+staff_type_instructional=Enter staff type
 who_else_supported_the_initiative=Who else supported the initiative
-who_else_supported_the_initiative_placeholder=Enter who else supported the initiative
-general_issues_placeholder=Select an issue
-issue_placeholder=Select an issue
+who_else_supported_the_initiative_instructional=Enter who else supported the initiative
+general_issues_instructional=Select an issue
+issue_instructional=Select an issue
 #Method.js
 kind_of_influence=Kind of influence
-kind_of_influence_placeholder=Select kind of influence
+kind_of_influence_instructional=Select kind of influence
 communication_with_audience=Communication with audience
-communication_with_audience_placeholder=Select a communication with audience
+communication_with_audience_instructional=Select a communication with audience
 decision_method=Decision method
-decision_method_placeholder=Select a decision method
+decision_method_instructional=Select a decision method
 face_to_face_online_or_both=Face-to-face, online or both
-facetoface_online_or_both_placeholder=Select face-to-face, online or both
+facetoface_online_or_both_instructional=Select face-to-face, online or both
 facilitated=Facilitated
 communication_mode=Communication Mode
-communication_mode_placeholder=Select a communication mode
+communication_mode_instructional=Select a communication mode
 governance_contribution=Governance contribution
 typical_funding_source=Typical funding source
-typical_funding_source_placeholder=Select typical funding source
+typical_funding_source_instructional=Select typical funding source
 typical_sponsoring_entity=Type of sponsoring entity
-typical_sponsoring_entity_placeholder=Select type of sponsoring entity
+typical_sponsoring_entity_instructional=Select type of sponsoring entity
 typical_implementing_entity=Type of implementing entity
-typical_implementing_entity_placeholder=Select type of implementing entity
+typical_implementing_entity_instructional=Select type of implementing entity
 #Organization.js
 sector=Sector
-sector_placeholder=Select Sector
+sector_instructional=Select Sector
 executive_director=Executive Director
-executive_director_placeholder=Enter Executive Director
+executive_director_instructional=Enter Executive Director
 #CaseEditor
 strawberry=Strawberry
 chocolate=Chocolate
 vanilla=Vanilla
+relationship=Relationship
+relationship_instructional=Select and rank up to three ways you are related to this case, in order of relevance, with (1) being your primary relationship to the case.
 war=War
 peace=Peace
 community_development=Community Development
@@ -680,7 +686,7 @@ new_media_ie_internet_texting_etc=New Media (i.e. internet, texting, etc)
 traditional_media_ie_television_radio_newspapers=Traditional Media (i.e. television, radio, newspapers)
 not_applicable=Not Applicable
 voting=Voting
-voting_placeholder=Select type of voting
+voting_instructional=Select type of voting
 getting_sense_of_room/group_ie_no_formal_voting=Getting sense of room/group (i.e. no formal voting)
 opinion_survey=Opinion Survey
 both=both
@@ -1076,43 +1082,43 @@ featured_searches=Featured Searches
 mention_participatory_budgeting=Mention "Participatory Budgeting"
 tag_infrastructure=Tagged as: Infrastructure
 case_title_label=Title of Case
-case_title_placeholder=Give this public participation project or event a descriptive title in <b>10 words or less</b>. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
+case_title_explanatory=Give this public participation project or event a descriptive title in <b>10 words or less</b>. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
 case_title_exp_text=Please give this case a descriptive title in 15 words or less. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
 case_body_title=Case Description/Narrative
 method_title_label=Title of Method
-method_title_placeholder=Enter title
+method_title_instructional=Enter title
 method_body_title=Method description
 organization_title_label=Title of Organization
-organization_title_placeholder=Enter title
+organization_title_instructional=Enter title
 organization_body_title=Description of the organization
 tags_title=Tags
 tags_prompt=Type to search for an existing tag
-tags_placeholder=Enter a tag
+tags_instructional=Enter a tag
 unknown_title_label=Unknown
-unknown_title_placeholder=Unknown
+unknown_title_instructional=Unknown
 unknown_body_title=Unknown
 best_for=Best for
-best_for_placeholder=Select Best for
+best_for_instructional=Select Best for
 governance_contribution=Governance contribution
-governance_contribution_placeholder=Select Governance contribution
+governance_contribution_instructional=Select Governance contribution
 issue_interdependency=Issue interdependency
-issue_interdependency_placeholder=Select Issue interdependency
+issue_interdependency_instructional=Select Issue interdependency
 issue_polarization=Issue polarization
-issue_polarization_placeholder=Select Issue polarization
+issue_polarization_instructional=Select Issue polarization
 issue_technical_complexity=Issue technical complexity
-issue_technical_complexity_placeholder=Select Issue technical complexity
+issue_technical_complexity_instructional=Select Issue technical complexity
 method_of_interaction=Method of interaction
-method_of_interaction_placeholder=Select Method of interaction
+method_of_interaction_instructional=Select Method of interaction
 public_interaction_method=Public interaction method
-public_interaction_method_placeholder=Select Public interaction method
+public_interaction_method_instructional=Select Public interaction method
 typical_funding_source=Typical funding source
-typical_funding_source_placeholder=Select Typical funding source
+typical_funding_source_instructional=Select Typical funding source
 achieving_public_goods=Achieving Public Goods
-achieving_public_goods_placeholder=Select Achieving Public Goods
+achieving_public_goods_instructional=Select Achieving Public Goods
 addressing_identitybased_issues=Addressing Identity-Based Issues
-addressing_identitybased_issues_placeholder=Select Addressing Identity-Based Issues
+addressing_identitybased_issues_instructional=Select Addressing Identity-Based Issues
 providing_social_goods=Providing Social Goods
-providing_social_goods_placeholder=Select Providing Social Goods
+providing_social_goods_instructional=Select Providing Social Goods
 distributing_individual_material_goods=Distributing Individual Material Goods
 aggregation_of_individual_preferences_to_create_survey_data=Aggregation of Individual Preferences to Create Survey Data
 n/a=N/A
@@ -1310,7 +1316,7 @@ do_full_version=Do full version
 edit_full_version=Edit full version
 save=Save
 suggest_tag=Add tags to make your submission easy to find (e.g. OIDP2017)
-location_placeholder=Type to search for known location
+location_instructional=Type to search for known location
 links_prompt=Add another link
 videos_prompt=Add another video
 # General topics
@@ -1537,8 +1543,8 @@ pages=pages
 of=of
 data=Data
 specific_topic=Specific Topic
-specific_topic_placeholder=Select an specific Topic
+specific_topic_instructional=Rank order up to three of the most relevant, specific topics, with “1” indicating the most relevant topic.
 tags=Tags
-case_description_placeholder=<p>The following standard structure makes it easier to compare and analyze entries.</p><p>We recommend you use the headings below and refer to our guidelines as you prepare your case entry.</p><p>To view the guidelines, copy and paste this URL into your browser: <a href="https://goo.gl/V2SHQn">https://goo.gl/V2SHQn</a></p><p/><h3>Problems and Purpose</h3><p/><h3>History</h3><p/><h3>Originating Entities and Funding</h3><p/><h3>Participant Selection</h3><p/><h3>Methods and Tools Used</h3><p/><h3>Deliberation, Decisions, and Public Interaction</h3><p/><h3>Influence, Outcomes, and Effects</h3><p/><h3>Analysis and Lessons Learned</h3><p/><h3>Secondary Sources</h3><p/><h3>External Links</h3><p/><h3>Notes</h3><p/>
+case_description_placeholder=<p>The following standard structure makes it easier to compare and analyze entries.</p><p>We recommend you use the headings below and refer to our guidelines as you prepare your case entry.</p><p>To view the guidelines, copy and paste this URL into your browser: <a href="https://goo.gl/V2SHQn">https://goo.gl/V2SHQn</a></p>
 searchmatched=This matched your search.
 featured_map=This is a featured item.
